--- a/locale/en_US/LC_MESSAGES/application.po
+++ b/locale/en_US/LC_MESSAGES/application.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-04-28 12:52+0200\n"
-"PO-Revision-Date: 2022-04-25 16:28+0200\n"
+"PO-Revision-Date: 2022-10-06 20:10+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 2.3\n"
 
 msgid "Nahoru"
 msgstr "Top"
@@ -2667,11 +2667,11 @@ msgstr "1 item of %t left"
 
 #: ../lib/ajax_pager/ajax_pager.php:70
 msgid "Zbývají %s položky z %t"
-msgstr "%s items of %s left"
+msgstr "%s items of %t left"
 
 #: ../lib/ajax_pager/ajax_pager.php:71
 msgid "Zbývá %s položek z %t"
-msgstr "%s items of %s left"
+msgstr "%s items of %t left"
 
 #: ../lib/ajax_pager/ajax_pager.php:75
 msgid "Vyhledáno celkem %t produktů"
